src/test/ui/impl-duplicate-methods.stderr
error[E0201]: duplicate definitions with name `orange`:
  --> $DIR/impl-duplicate-methods.rs:5:5
   |
LL |     fn orange(&self) {}
   |     ------------------- previous definition of `orange` here
LL |     fn orange(&self) {}
   |     ^^^^^^^^^^^^^^^^^^^ duplicate definition

error: aborting due to previous error

For more information about this error, try `rustc --explain E0201`.
