src/test/ui/impl-duplicate-methods.rs
struct Foo;

impl Foo {
    fn orange(&self) {}
    fn orange(&self) {}
    //~^ ERROR duplicate definition
}

fn main() {}
